<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/background_grad">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="10">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/detail_fragment_image_view"/>




                <!-- Movie Name Row Below -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/row_title"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/movie_title"
                            android:textColor="@color/titleTextColor"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:layout_gravity="right">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="right"
                            android:textColor="@color/detailTextColor"
                            android:id="@+id/textView_movieTitle_field"/>

                    </LinearLayout>

                </LinearLayout>





                <!-- Original Title Row Below -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/row_original_title"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginTop="@dimen/line_gap">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/original_title"
                            android:textColor="@color/titleTextColor"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:layout_gravity="right">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="@color/detailTextColor"
                            android:id="@+id/textView_originalTitle_field"/>

                    </LinearLayout>

                </LinearLayout>




                <!-- Release Date Row Below -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/row_release_date"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginTop="@dimen/line_gap">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/release_date"
                            android:textColor="@color/titleTextColor"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:layout_gravity="right">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="@color/detailTextColor"
                            android:id="@+id/textView_releaseDate_field"/>

                    </LinearLayout>

                </LinearLayout>





                <!-- Popularity Row Below -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/row_popularity"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginTop="@dimen/line_gap">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/popularity"
                            android:textColor="@color/titleTextColor"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:layout_gravity="right">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="@color/detailTextColor"
                            android:id="@+id/textView_popularity_field"/>

                    </LinearLayout>

                </LinearLayout>





                <!-- User Rating (Vote Average) Row Below -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/row_user_rating"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginTop="@dimen/line_gap">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/user_rating"
                            android:textColor="@color/titleTextColor"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:layout_gravity="right">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="@color/detailTextColor"
                            android:id="@+id/textView_userRating_field"/>

                    </LinearLayout>

                </LinearLayout>





                <!-- Overview Row Below -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/row_overview"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_marginTop="@dimen/line_gap">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/overview"
                        android:textColor="@color/titleTextColor"/>

                    <!-- Horizontal Line
                    <View
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:background="@color/horizontal_line_color" />

                    -->

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/detailTextColor"
                        android:id="@+id/textView_overView_field"/>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
            </LinearLayout>

        </LinearLayout>




    </ScrollView>

</LinearLayout>